# mta-brain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE.md  README.md  config.py  docker-compose-prod.yml  docker-compose.override.yml  docker-compose.yml  logging.json  main.py  pyproject.toml  settings.json
.github/: ci.yml
.github/workflows/: ci.yml  deploy.yml
db_init/: init-db.sh
generated-protos/: nyct_subway_pb2.py
gtfs/: db.py  gtfs_logging.py
gtfs/gtfs_etl/: gtfs_download.py  gtfs_parser.py
sql/: V0__init-schema.sql  V1__initial_schema.sql  V1__supplemented_schema.sql  V2__service-stops-view.sql  V3__clean_stop_index.sql  afterMigrate.sql
src/services/static_etl/: db_loader.py  etl_runner.py  gtfs_download.py  gtfs_parser.py
src/services/subway_live_hydrator/: feed_parser.py  runner.py  state_manager.py
src/transit_core/: config.py  db.py  main.py  redis_client.py  transit_core_logging.py
src/transit_core/api/: cli.py  dependencies.py  main.py  schemas.py
src/transit_core/api/routers/: stops.py  trips.py
src/transit_core/core/: exceptions.py  interfaces.py  models.py  repository.py
src/transit_core/core/protos/: nyct_subway_pb2.py
src/transit_core/etl/: etl_runner.py  gtfs_download.py  gtfs_parser.py
src/transit_core/infrastructure/: state_store.py  static_store.py
src/transit_core/mcp/: server.py
src/transit_core/scripts/: test_arrivals_board.py  test_trip_arrivals.py  tester.py
tests/: conftest.py  test_api.py  test_api_dependencies.py  test_api_lifespan.py  test_config.py  test_db.py  test_feed_parser.py  test_infrastructure.py  test_live_hydrator_runner.py  test_mcp_server.py  test_redis.py  test_repository.py  test_state_manager.py  test_state_manager_integration.py  test_static_etl.py  test_static_store.py
transit_core/etl/: db_loader.py  gtfs_download.py
