[project]
name = "mta-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "protobuf>=6.33.0",
    "psycopg-pool>=3.2.7",
    "psycopg[binary]>=3.2.12",
    "python-json-logger>=4.0.0",
    "requests>=2.32.5",
]
