[project]
name = "mta-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "protobuf>=6.33.0",
    "psycopg-pool>=3.2.7",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.12",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["transit_core*"]  # Explicitly tell it to look for your package

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.ruff]
# Target the src directory
src = ["src"]
line-length = 88
target-version = "py313"
exclude = ["*_pb2.py"]

[tool.ruff.lint]
# Select specific rules (E = Errors, F = Pyflakes, I = isort)
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
reload-gtfs = "services.static_etl.etl_runner:run_reload"
reload-all-gtfs = "services.static_etl.etl_runner:reload_all"
