[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "mta-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.5",
    "mcp>=1.26.0",
    "protobuf>=6.33.0",
    "psycopg-pool>=3.2.7",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.12",
    "testcontainers>=4.14.0",
    "ty>=0.0.18",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["transit_core*", "services*"]  # Explicitly tell it to look for your package

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.ruff]
# Target the src directory
src = ["src"]
line-length = 88
target-version = "py313"
exclude = ["*_pb2.py"]

[tool.ruff.lint]
# Select specific rules (E = Errors, F = Pyflakes, I = isort)
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
gtfs-static-reload = "services.static_etl.etl_runner:run_reload"
gtfs-static-reload-all = "services.static_etl.etl_runner:reload_all"
live-hydrator = "services.subway_live_hydrator.runner:runner"
api = "transit_core.api.cli:main"
mcp = "transit_core.mcp.server:main"
